--- a/todo.txt
+++ b/todo.txt
@@ -3,4 +3,4 @@ GA demote command.
 GA log reason for auto-demote
 Ask newcomers new to discord to send selfie to the bot to 'protect their privacy' then relay the image to moderators discussion
 
-restart the bot chat
+restart the chat bot
