--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@ GA log reason for auto-demote
 Ask newcomers new to discord to send selfie to the bot to 'protect their privacy' then relay the image to moderators discussion
 
 restart the chat bot
+hhh
