--- a/todo.txt
+++ b/todo.txt
@@ -4,4 +4,5 @@ GA log reason for auto-demote
 Ask newcomers new to discord to send selfie to the bot to 'protect their privacy' then relay the image to moderators discussion
 
 restart the chat bot
-hhh
+
+Update to discord.js v14
